--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px 0;
 
   color-scheme: light dark;
   color: black;
@@ -48,4 +47,9 @@ img {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
+}
+body {
+  margin: 0;
+  width: 100%;
+  padding-bottom: 20px;
 }
